basic_services/jobs/inner_jobs/users/prod/00-users-deployment.prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "users"
  namespace: "leaf-image-management-system"
  labels:
    name: "users"
spec:
  replicas: 1
  selector:
    matchLabels:
      name: "users"
  template:
    metadata:
      labels:
        name: "users"
    spec:
      containers:
        - name: "users"
          image: "12221994/users_job:latest"
          ports:
            - containerPort: 5050
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
