basic_services/jobs/inner_jobs/users/prod/01-users-service.prod.yaml
apiVersion: v1
kind: Service
metadata:
  name: "users"
  namespace: "leaf-image-management-system"
spec:
  selector:
    name: "users"
  type: NodePort
  ports:
    - port: 5050
      targetPort: 5050
      nodePort: 30551
      protocol: TCP
      name: job-port
